# Synth

./: .gitignore  CMakeLists.txt  README.md  pico_sdk_import.cmake
UF2/: PCA9555_input_test.uf2  README.md  blink.uf2
desktop/: config.py  main.py  oscillator.py
desktop/waves/: sine.py
include/: config.h  keys.h  led.h  main.h  oscillator.h  waves.h
include/display/: display_loop.h  font.h  gfx.h  st7789v2.h
include/display/screens/: effects.h  envelope.h  filter.h  home.h  midi.h  osc.h  presets.h  settings.h
include/interface/: PCA9555.h  PCM5102.h  ST7789V2.h  W25Q16.h  W25Q64.h
include/pio/: PCM5102.pio.h  ST7789V2.pio.h
include/synth/: envelope.h  filter.h  keys.h  lfo.h  midi.h  osc.h  presets.h
include/synth/effects/: chorus.h  delay.h  reverb.h
include/waves/: saw.h  sin.h  squ.h  tri.h
src/: config.h  keys.c  led.c  main.c
src/display/: README.md  display_loop.c  font.c  gfx.c
src/display/screens/: effects.c  envelope.c  filter.c  home.c  midi.c  osc.c  presets.c  settings.c
src/interface/: PCA9555.c  PCM5102.c  README.md  ST7789V2.c
src/pio/: PCM5102.pio  st7789v2.pio
src/synth/: envelope.c  filter.c  keys.c  lfo.c  osc.c  presets.c
src/synth/effects/: chorus.c  delay.c  reverb.c
